[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/parts/PartWeaponEditor.gd" type="Script" id=1]
[ext_resource path="res://ui/components/ComponentAttributeSelector.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="WeaponEditor" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.0
margin_top = -227.5
margin_right = 327.0
margin_bottom = 227.5
rect_min_size = Vector2( 580, 360 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 647.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="MarginContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 14.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 5

[node name="Label" type="Label" parent="VBoxContainer/Title"]
margin_left = 5.0
margin_right = 640.0
margin_bottom = 14.0
text = "Editor de items"
valign = 1

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 22.0
size_flags_vertical = 7

[node name="Contents" type="MarginContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 640.0
margin_bottom = 471.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Contents"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Section" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_right = 630.0
margin_bottom = 14.0

[node name="Separator" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/Section"]
margin_right = 263.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Section"]
margin_left = 267.0
margin_right = 362.0
margin_bottom = 14.0
text = "Datos de Arma"

[node name="Separator2" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/Section"]
margin_left = 366.0
margin_right = 630.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Box1" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 24.0
margin_right = 630.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box1"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Nombre:"
align = 2
valign = 1

[node name="InputName" type="LineEdit" parent="VBoxContainer/Contents/VBoxContainer/Box1"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box2" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 58.0
margin_right = 630.0
margin_bottom = 158.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box2"]
margin_right = 120.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Descripcion:"
align = 2
valign = 1

[node name="InputDescription" type="TextEdit" parent="VBoxContainer/Contents/VBoxContainer/Box2"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 11
smooth_scrolling = true

[node name="Box3" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 168.0
margin_right = 630.0
margin_bottom = 192.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box3"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Clase:"
align = 2
valign = 1

[node name="InputClass" type="LineEdit" parent="VBoxContainer/Contents/VBoxContainer/Box3"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="SectionAttack" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 202.0
margin_right = 630.0
margin_bottom = 216.0

[node name="Separator" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionAttack"]
margin_right = 288.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/SectionAttack"]
margin_left = 292.0
margin_right = 337.0
margin_bottom = 14.0
text = "Ataque"

[node name="Separator2" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionAttack"]
margin_left = 341.0
margin_right = 630.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Box5" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 226.0
margin_right = 630.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Tipo de ataque:"
align = 2
valign = 1

[node name="InputAttackType" type="OptionButton" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 124.0
margin_right = 224.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Melee"
align = 1
items = [ "Melee", null, false, 0, null, "Rango", null, false, 1, null ]
selected = 0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 228.0
margin_right = 480.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label3" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 484.0
margin_right = 526.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Rango:"
align = 2
valign = 1

[node name="InputRange" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 530.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
min_value = 5.0
max_value = 999.0
value = 5.0
align = 1
suffix = "pies"

[node name="Box4" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 260.0
margin_right = 630.0
margin_bottom = 377.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Contents/VBoxContainer/Box4"]
margin_right = 630.0
margin_bottom = 117.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box4/VBoxContainer"]
margin_left = 165.0
margin_right = 465.0
margin_bottom = 14.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 7
text = "Atributos seleccionables para roll de ataque:"
align = 1
valign = 1

[node name="InputAttributes" parent="VBoxContainer/Contents/VBoxContainer/Box4/VBoxContainer" instance=ExtResource( 2 )]

[node name="SectionDamage" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 387.0
margin_right = 630.0
margin_bottom = 401.0

[node name="Separator" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionDamage"]
margin_right = 294.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/SectionDamage"]
margin_left = 298.0
margin_right = 331.0
margin_bottom = 14.0
text = "Daño"

[node name="Separator2" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionDamage"]
margin_left = 335.0
margin_right = 630.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Box6" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 411.0
margin_right = 630.0
margin_bottom = 435.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_right = 86.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Tipo de daño:"
align = 2
valign = 1

[node name="InputDamageType" type="LineEdit" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 90.0
margin_right = 190.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 194.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 224.0
margin_right = 316.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Dado de daño:"
align = 2
valign = 1

[node name="InputDiceSides" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 320.0
margin_right = 395.0
margin_bottom = 24.0
rect_min_size = Vector2( 75, 0 )
min_value = 2.0
value = 2.0
align = 1
prefix = "d"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 399.0
margin_right = 426.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 430.0
margin_right = 551.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Cantidad de dados:"
align = 2
valign = 1

[node name="InputDiceQuantity" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 555.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 75, 0 )
min_value = 1.0
value = 1.0
align = 1

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 475.0
margin_right = 640.0
margin_bottom = 479.0
size_flags_vertical = 7

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 483.0
margin_right = 640.0
margin_bottom = 513.0
size_flags_vertical = 10
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Buttons"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 25.0

[node name="ButtonSave" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 56.0
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Guardar"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 373.0
margin_right = 573.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Cancelar"

[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
